# Microservice-AI-Log-Analyser

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
.streamlit/: secrets.toml.example
logai/: __init__.py  ai.py  cli.py  env.py  grouping.py  models.py  parsers.py  reporting.py
logai_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_ai_errors.py  test_grouping.py  test_parsers.py
